--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" type="module"></script>
 
-    <title>Rammerhead</title>
+    <title>RammerWeb</title>
 </head>
 <body>
     <header>
