--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="icon" type="image/png" href="favicon.png" />
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" type="module"></script>
 
-    <title>RammerWeb</title>
+<html>
+
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+
+    <title>Rammerhead Proxy</title>
 </head>
+
 <body>
     <header>
         <img src="logo.png" />
-        <h1>Rammerhead</h1>
+        <h1>Rammerhead Proxy</h1>
     </header>
     <div class="container mb-5">
-        <p class="mt-3 mb-3 fw">Join the <a href="https://amethystnetwork-dev.github.io/discord/invite" target="_blank">Amethyst Network Discord server</a> or <a href="https://github.com/amethystnetwork-dev/Rammerhead" target="_blank">Fork me on GitHub</a></p>
-        <p class="mb-0 fw-bold">Notice: inactive sessions will be deleted after 3 days or if the server shuts down and does not persist files.</p>
-        <p class="mb-3 fw-bold">Notice 2: Treat every session id like an isolated incognito browser that
+        <p class="mt-3 mb-3 font-weight">Join the <a href="https://discord.gg/VNT4E7gN5Y">Discord server</a> for updates
+            or just chat about life</p>
+        <p class="mb-0 font-weight-bold">Notice: inactive sessions will be deleted after 3 days.</p>
+        <p class="mb-3 font-weight-bold">Notice 2: Treat every session id like an isolated incognito browser that
             belongs only to you. DO NOT SHARE THE SESSION ID. All logins that you make with the session id will be saved
             in that session. Anyone that has your session id or session url CAN ACCESS your logged in sites.</p>
-        <p class="mb-3 fw-bold text-danger" id="error-text" style="display: none">Error: some text</p>
+        <p class="mb-3 font-weight-bold text-danger" id="error-text" style="display: none">Error: some text</p>
         <div class="input-group mb-2" id="password-wrapper" style="display: none">
             <div class="input-group-prepend">
                 <span class="input-group-text">Enter password</span>
@@ -28,15 +33,23 @@
                 placeholder="Password is given by host of this site.">
         </div>
         <div class="input-group mb-2">
-            <span class="input-group-text">Enter URL</span>
+            <div class="input-group-prepend">
+                <span class="input-group-text">Enter URL</span>
+            </div>
             <input type="text" class="form-control" id="session-url" placeholder="https://www.google.com/">
-            <button class="btn btn-success" type="button" id="session-go">Go!</button>
+            <div class="input-group-append">
+                <button class="btn btn-success" id="session-go">Go!</button>
+            </div>
         </div>
         <div class="input-group mb-4">
-            <span class="input-group-text">Session ID</span>
+            <div class="input-group-prepend">
+                <span class="input-group-text">Session ID</span>
+            </div>
             <input readonly type="text" class="form-control disable-text" id="session-id"
                 placeholder="click on 'Create new session ID' or 'Fill in existing session ID' from below">
-            <button class="btn btn-secondary" type="button" id="session-create-btn">Create new session ID</button>
+            <div class="input-group-append">
+                <button class="btn btn-secondary" id="session-create-btn" type="button">Create new session ID</button>
+            </div>
         </div>
         <button class="btn btn-outline-secondary" id="session-advanced-toggle">Show advanced options</button>
         <div class="mt-2 mb-4" id="session-advanced-container" style="display: none">
@@ -45,7 +58,9 @@
                 <label class="form-check-label" for="session-shuffling">Enable URL Shuffling</label>
             </div>
             <div class="input-group mb-3">
-                <span class="input-group-text">HTTP Proxy</span>
+                <div class="input-group-prepend">
+                    <span class="input-group-text">HTTP Proxy</span>
+                </div>
                 <input type="text" class="form-control" id="session-httpproxy"
                     placeholder="http://username:password@proxyipaddress:proxyport">
             </div>
